# projeto-final-ed

./: .env.example  .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  output.ipynb  pyproject.toml  sitemap.xml
airflow/: Dockerfile  docker-compose.override.yml  requirements.txt
airflow/dags/: pipeline_medalhao.py
arquitetura/: index.html
bronze/: index.html
dashboard/: index.html
data/: README.md
docker/: docker-compose.yml
docker/hive/: Dockerfile  entrypoint.sh  hive-env.sh  hive-site.xml
docker/trino/: init.sql
docker/trino/etc/: config.properties  jvm.config
docker/trino/etc/catalog/: delta.properties  hive.properties
docs/: arquitetura.md  bronze.md  dashboard.md  gold.md  index.md  jobs.md  landing.md  silver.md
docs/stylesheets/: extra.css
gold/: index.html
jobs/: index.html
landing/: index.html
metabase/: dashboard.json  seed.py
notebooks/: 00_download_olist.ipynb  01a_landing_to_bronze.ipynb  01a_landing_to_bronze.py  01b_nosql_to_bronze.ipynb  01b_nosql_to_bronze.py  02_bronze_to_silver.ipynb  03_silver_to_gold.ipynb
scripts/: setup_jars.py
scripts/ingest/: download_olist.py  generate_agents.py  generate_reviews_nosql.py  generate_support_tickets_nosql.py  landing_ingest.py  upload_reviews_nosql.py
search/: search_index.json
silver/: index.html
stylesheets/: extra.css
