[project]
name = "projeto-final-ed"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
    "pymdown-extensions>=10.7",
    "boto3>=1.34",
    "psycopg[binary]>=3.2",
    "faker>=24.0",
    "kaggle>=1.6",
    "jupyterlab>=4.1",
    "papermill>=2.6",
    "pyspark>=3.5",
    "delta-spark==3.2.1",
]
